# json_xml_nf_explorer

./: CHANGELOG.md  clovis.json  json-xml-explorer.cabal
app/: Main.hs
files/: n1.json  n1.xml  n11.json  n2.json  n2.xml  n3.json  n4.json  n5.json  n6.json  test2.json  test2.xml
src/: MainSchema.hs  SchemaTest.hs  Schemas.hs  XmlToJson.hs
src/Schemas/: HeaderSchema.hs  NfeProcSchema.hs  RootSchema.hs
