cabal-version:      3.0

name:               json-xml-explorer

version:            0.1.0.0

license:            MIT

license-file:       LICENSE

author:             Anomalocaris

maintainer:         flavioborinjunior@gmail.com

build-type:         Simple

extra-doc-files:    CHANGELOG.md


common warnings
    ghc-options: -Wall

executable json-xml-explorer
    import:           warnings

    main-is:          Main.hs

    default-extensions:
        QuasiQuotes, DataKinds, OverloadedStrings, TypeFamilies, DeriveGeneric

    other-modules: 
        SchemaTest,
        XmlToJson,
        HeaderSchema

    build-depends:    
        base ^>=4.19.1.0,
        aeson,
        aeson-schemas,
        parsec,
        text,
        bytestring

    hs-source-dirs:   app, src

    default-language: Haskell2010
